--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "web-sprint-challenge-applied-javascript",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "mkdir -p dist && cp -R ./assets ./dist && parcel index.html"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/web-sprint-challenge-applied-javascript.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/web-sprint-challenge-applied-javascript/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/web-sprint-challenge-applied-javascript#readme",
-  "devDependencies": {
-    "eslint": "^7.3.0",
-    "less": "^3.11.3",
-    "parcel-bundler": "^1.12.4"
-  },
-  "dependencies": {
-    "axios": "^0.19.2"
-  }
+	"name": "web-sprint-challenge-applied-javascript",
+	"version": "1.0.0",
+	"scripts": {
+		"start": "parcel index.html"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LambdaSchool/web-sprint-challenge-applied-javascript.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/LambdaSchool/web-sprint-challenge-applied-javascript/issues"
+	},
+	"homepage": "https://github.com/LambdaSchool/web-sprint-challenge-applied-javascript#readme",
+	"devDependencies": {
+		"eslint": "^7.3.0",
+		"less": "^3.11.3",
+		"parcel-bundler": "^1.12.4"
+	},
+	"dependencies": {
+		"axios": "^0.19.2"
+	}
 }
